force-app/main/default/objects/FNS_Collateral__c/FNS_Collateral__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Collateral details.</description>
    <label>Collateral</label>
    <nameField>
        <label>Collateral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>