force-app/main/default/objects/FNS_Collateral__c/fields/FNS_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccountNumber__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>