force-app/main/default/objects/FNS_Collateral__c/fields/FNS_AgricultureUse__c.field-meta.xml
<CustomField>
    <fullName>FNS_AgricultureUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agricultural Use</label>
    <type>Checkbox</type>
</CustomField>