force-app/main/default/objects/FNS_Collateral__c/fields/FNS_Amount__c.field-meta.xml
<CustomField>
    <fullName>FNS_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>