force-app/main/default/objects/FNS_Collateral__c/fields/FNS_Application__c.field-meta.xml
<CustomField>
    <fullName>FNS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>