force-app/main/default/objects/FNS_Collateral__c/fields/FNS_AppraisalDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_AppraisalDate__c</fullName>
    <description>This field is usedes to  map Appraisa lDate from API.</description>
    <label>Appraisal / Valuation Date</label>
    <type>DateTime</type>
</CustomField>