force-app/main/default/objects/FNS_Collateral__c/fields/FNS_AppraisalRequired__c.field-meta.xml
<CustomField>
    <fullName>FNS_AppraisalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to map appraisal Required field fromAPI.</description>
    <label>Appraisal Report Required</label>
    <type>Checkbox</type>
</CustomField>