force-app/main/default/objects/FNS_Collateral__c/fields/FNS_AppraisalType__c.field-meta.xml
<CustomField>
    <fullName>FNS_AppraisalType__c</fullName>
    <label>Appraisal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_CollateralAppraisalType</valueSetName>
    </valueSet>
</CustomField>