force-app/main/default/objects/FNS_Collateral__c/fields/FNS_AppraisalTypeId__c.field-meta.xml
<CustomField>
    <fullName>FNS_AppraisalTypeId__c</fullName>
    <label>Appraisal Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>