force-app/main/default/objects/FNS_Collateral__c/fields/FNS_BookNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_BookNumber__c</fullName>
    <label>Book Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>