force-app/main/default/objects/FNS_Collateral__c/fields/FNS_CensusTract__c.field-meta.xml
<CustomField>
    <fullName>FNS_CensusTract__c</fullName>
    <label>Tract</label>
    <length>7</length>
    <type>Text</type>
</CustomField>