force-app/main/default/objects/FNS_Collateral__c/fields/FNS_CollateralAddress__c.field-meta.xml
<CustomField>
    <fullName>FNS_CollateralAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Address</label>
    <referenceTo>FNS_Address__c</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>