force-app/main/default/objects/FNS_Collateral__c/fields/FNS_CollateralExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_CollateralExtId__c</fullName>
    <description>This field is used as External id field.</description>
    <label>Collateral Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>