force-app/main/default/objects/FNS_Collateral__c/fields/FNS_CollateralNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_CollateralNumber__c</fullName>
    <description>This field is used to map collateralNumber field.</description>
    <label>Collateral Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>