force-app/main/default/objects/FNS_Collateral__c/fields/FNS_CollateralOwner__c.field-meta.xml
<CustomField>
    <fullName>FNS_CollateralOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>