force-app/main/default/objects/FNS_Collateral__c/fields/FNS_CollateralType__c.field-meta.xml
<CustomField>
    <fullName>FNS_CollateralType__c</fullName>
    <description>This field is used to store collateral type values.</description>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_CollateralType</valueSetName>
    </valueSet>
</CustomField>