force-app/main/default/objects/FNS_Collateral__c/fields/FNS_CommercialPropertyType__c.field-meta.xml
<CustomField>
    <fullName>FNS_CommercialPropertyType__c</fullName>
    <label>Commercial Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_CollateralCommercialPropertyType</valueSetName>
    </valueSet>
</CustomField>