force-app/main/default/objects/FNS_Collateral__c/fields/FNS_Description__c.field-meta.xml
<CustomField>
    <fullName>FNS_Description__c</fullName>
    <description>This field is used to store description value for collateral.</description>
    <label>Collateral Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>