force-app/main/default/objects/FNS_Collateral__c/fields/FNS_HostNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_HostNumber__c</fullName>
    <description>This field is used to map hostNumber field.</description>
    <label>Host Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>