force-app/main/default/objects/FNS_Collateral__c/fields/FNS_IssuerName__c.field-meta.xml
<CustomField>
    <fullName>FNS_IssuerName__c</fullName>
    <label>Issuer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>