force-app/main/default/objects/FNS_Collateral__c/fields/FNS_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_ItemNumber__c</fullName>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>