force-app/main/default/objects/FNS_Collateral__c/fields/FNS_LegalDescription__c.field-meta.xml
<CustomField>
    <fullName>FNS_LegalDescription__c</fullName>
    <label>Legal Description</label>
    <type>TextArea</type>
</CustomField>