force-app/main/default/objects/FNS_Collateral__c/fields/FNS_MarketValue__c.field-meta.xml
<CustomField>
    <fullName>FNS_MarketValue__c</fullName>
    <label>Market Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>