force-app/main/default/objects/FNS_Collateral__c/fields/FNS_NumberOfUnits__c.field-meta.xml
<CustomField>
    <fullName>FNS_NumberOfUnits__c</fullName>
    <label>Numb. Of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>