force-app/main/default/objects/FNS_Collateral__c/fields/FNS_OwnerOccupied__c.field-meta.xml
<CustomField>
    <fullName>FNS_OwnerOccupied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Occupied</label>
    <type>Checkbox</type>
</CustomField>