force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PageNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_PageNumber__c</fullName>
    <label>Page Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>