force-app/main/default/objects/FNS_Collateral__c/fields/FNS_Parcel__c.field-meta.xml
<CustomField>
    <fullName>FNS_Parcel__c</fullName>
    <label>Parcel ID#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>