force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PercentLeased__c.field-meta.xml
<CustomField>
    <fullName>FNS_PercentLeased__c</fullName>
    <label>Percent Leased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>