force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PledgedDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_PledgedDate__c</fullName>
    <label>Pledged Date</label>
    <type>DateTime</type>
</CustomField>