force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PropertyBuiltDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_PropertyBuiltDate__c</fullName>
    <label>Date Property Built</label>
    <length>255</length>
    <type>Text</type>
</CustomField>