force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PropertyContactEmail__c.field-meta.xml
<CustomField>
    <fullName>FNS_PropertyContactEmail__c</fullName>
    <label>Property Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>