force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PropertyContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>FNS_PropertyContactFirstName__c</fullName>
    <label>Property Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>