force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PropertyContactLastName__c.field-meta.xml
<CustomField>
    <fullName>FNS_PropertyContactLastName__c</fullName>
    <label>Property Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>