force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PropertyDescription__c.field-meta.xml
<CustomField>
    <fullName>FNS_PropertyDescription__c</fullName>
    <label>Property Description</label>
    <type>TextArea</type>
</CustomField>