force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PropertyIdNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_PropertyIdNumber__c</fullName>
    <label>Property ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>