force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PropertyType__c.field-meta.xml
<CustomField>
    <fullName>FNS_PropertyType__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_CollateralProperty_Type</valueSetName>
    </valueSet>
</CustomField>