force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_PurchaseDate__c</fullName>
    <label>Purchase Date</label>
    <type>DateTime</type>
</CustomField>