force-app/main/default/objects/FNS_Collateral__c/fields/FNS_PurchasedDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_PurchasedDate__c</fullName>
    <description>This field is used to map purchasedDate from API..</description>
    <label>Date Purchased</label>
    <type>DateTime</type>
</CustomField>