force-app/main/default/objects/FNS_Collateral__c/fields/FNS_RecordingOffice__c.field-meta.xml
<CustomField>
    <fullName>FNS_RecordingOffice__c</fullName>
    <label>Recording Office</label>
    <length>100</length>
    <type>Text</type>
</CustomField>