force-app/main/default/objects/FNS_Collateral__c/fields/FNS_SecurityType__c.field-meta.xml
<CustomField>
    <fullName>FNS_SecurityType__c</fullName>
    <label>Security Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_CollateralCategoryType</valueSetName>
    </valueSet>
</CustomField>