force-app/main/default/objects/FNS_Collateral__c/fields/FNS_SpecifiedGuidelines__c.field-meta.xml
<CustomField>
    <fullName>FNS_SpecifiedGuidelines__c</fullName>
    <label>Specified Guidelines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>