force-app/main/default/objects/FNS_Collateral__c/fields/FNS_SquareFootage__c.field-meta.xml
<CustomField>
    <fullName>FNS_SquareFootage__c</fullName>
    <label>Square Footage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>