force-app/main/default/objects/FNS_Collateral__c/fields/FNS_StockSymbol__c.field-meta.xml
<CustomField>
    <fullName>FNS_StockSymbol__c</fullName>
    <label>Stock Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>