force-app/main/default/objects/FNS_Collateral__c/fields/FNS_Subdivision__c.field-meta.xml
<CustomField>
    <fullName>FNS_Subdivision__c</fullName>
    <label>Subdivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>