force-app/main/default/objects/FNS_Collateral__c/fields/FNS_TaxMapNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_TaxMapNumber__c</fullName>
    <label>Tax Map#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>