force-app/main/default/objects/FNS_Collateral__c/fields/FNS_ValueDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_ValueDate__c</fullName>
    <label>Source Date</label>
    <type>DateTime</type>
</CustomField>