force-app/main/default/objects/FNS_Collateral__c/fields/FNS_ValueFairMarket__c.field-meta.xml
<CustomField>
    <fullName>FNS_ValueFairMarket__c</fullName>
    <label>Source of Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>