force-app/main/default/objects/FNS_Collateral__c/fields/FNS_ValueSource__c.field-meta.xml
<CustomField>
    <fullName>FNS_ValueSource__c</fullName>
    <label>Value Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>