force-app/main/default/objects/FNS_Collateral__c/fields/proposedUse__c.field-meta.xml
<CustomField>
    <fullName>proposedUse__c</fullName>
    <label>Proposed Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>