force-app/main/default/objects/FNS_Collateral__c/recordTypes/FNS_Collateral.recordType-meta.xml
<RecordType>
    <fullName>FNS_Collateral</fullName>
    <active>true</active>
    <label>Collateral</label>
</RecordType>